docs: update 'hello world'
Signed-off-by: Daniel Hu <tao.hu@merico.dev>

--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -19,14 +19,15 @@ linkTitle = "DevStream blog"
 
 
 {{% blocks/lead color="primary" %}}
-Goldydocs provides a single web UI providing visibility into porridge temperature, chair size, and bed softness metrics! You can even find out who's been eating **your** porridge.
 
-(Sadly, Goldydocs isn't a real project, but you can use this site as an example to create your own real websites with [Docsy](http://docsy.dev))
+A long introduction with DevStream.
+
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="New chair metrics!" %}}
-The Goldydocs UI now shows chair size metrics by default.
+{{% blocks/feature icon="fa-lightbulb" title="DevStream xxx !" %}}
+
+DevStream xxx
 
 Please follow this space for updates!
 {{% /blocks/feature %}}
@@ -37,8 +38,6 @@ We do a [Pull Request](https://github.com/merico-dev/stream/pulls) contributions
 {{% /blocks/feature %}}
 
 
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on Twitter!" url="" %}}
+{{% blocks/feature icon="fab fa-twitter" title="Follow us on xx!" url="" %}}
 For announcement of latest features etc.
 {{% /blocks/feature %}}
-
-
