--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -4,7 +4,7 @@ linkTitle = "DevStream blog"
 
 +++
 
-{{< blocks/cover title="Welcome to DevStream blog!" image_anchor="top" height="full" color="orange" >}}
+{{< blocks/cover title="Welcome to DevStream!" image_anchor="top" height="full" color="orange" >}}
 <div class="mx-auto">
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/blog" >}}">
 		Have Fun <i class="fas fa-arrow-alt-circle-right ml-2"></i>
@@ -20,24 +20,22 @@ linkTitle = "DevStream blog"
 
 {{% blocks/lead color="primary" %}}
 
-A long introduction with DevStream.
+We wanted to make it easy to set up personalized and flexible toolchains.
+
+So we built DevStream, an open-source DevOps toolchain manager.
 
 {{% /blocks/lead %}}
 
 {{< blocks/section color="dark" >}}
-{{% blocks/feature icon="fa-lightbulb" title="DevStream xxx !" %}}
 
-DevStream xxx
-
-Please follow this space for updates!
+{{% blocks/feature icon="fa-terminal" title="Flexible" %}}
+Define your tools as code.
 {{% /blocks/feature %}}
 
-
-{{% blocks/feature icon="fab fa-github" title="Contributions welcome!" url="https://github.com/merico-dev/stream" %}}
-We do a [Pull Request](https://github.com/merico-dev/stream/pulls) contributions workflow on **GitHub**. New users are always welcome!
+{{% blocks/feature icon="fa-bolt" title="Fast" %}}
+Five Minutes. One Command.
 {{% /blocks/feature %}}
 
-
-{{% blocks/feature icon="fab fa-twitter" title="Follow us on xx!" url="" %}}
-For announcement of latest features etc.
+{{% blocks/feature icon="fab fa-github" title="Contribute" %}}
+[Pull Requests](https://github.com/merico-dev/stream/pulls) are welcome!
 {{% /blocks/feature %}}
