--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -9,7 +9,7 @@ linkTitle = "DevStream blog"
 	<a class="btn btn-lg btn-primary mr-3 mb-4" href="{{< relref "/blog" >}}">
 		Have Fun <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 	</a>
-	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/merico-dev/stream">
+	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://github.com/devstream-io/devstream">
 		GitHub <i class="fab fa-github ml-2 "></i>
 	</a>
 	<p class="lead mt-5">DevStream: the open-source DevOps toolchain manager (DTM).</p>
@@ -37,5 +37,5 @@ Five Minutes. One Command.
 {{% /blocks/feature %}}
 
 {{% blocks/feature icon="fab fa-github" title="Contribute" %}}
-[Pull Requests](https://github.com/merico-dev/stream/pulls) are welcome!
+[Pull Requests](https://github.com/devstream-io/devstream/pulls) are welcome!
 {{% /blocks/feature %}}
